# filters-with-pybind

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.py
src/filters_with_pybind/: operations.cpp  stupid_module.py
